--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,7 @@
     "array-flatten": "^1.1.1",
     "async": "^3.2.4",
     "balanced-match": "^1.0.2",
-    "body-parser": "^1.20.1",
+    "body-parser": "^1.20.2",
     "brace-expansion": "^1.1.11",
     "bytes": "^3.1.2",
     "call-bind": "^1.0.2",
@@ -57,6 +57,7 @@
     "minimatch": "^3.1.2",
     "ms": "^2.0.0",
     "negotiator": "^0.6.3",
+    "nodemon": "^3.0.1",
     "object-inspect": "^1.12.3",
     "on-finished": "^2.4.1",
     "parseurl": "^1.3.3",
@@ -79,9 +80,8 @@
     "utils-merge": "^1.0.1",
     "vary": "^1.1.2"
   },
-  "devDependencies": {},
   "scripts": {
-    "start": "node ./bin/www.js",
+    "start": "nodemon ./bin/www.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
